--- a/projects/workers/package.json
+++ b/projects/workers/package.json
@@ -6,6 +6,9 @@
         "@ng-web-apis/common": ">=1.1.0"
     },
     "description": "A library for comfortable use of Web Workers API in Angular",
+    "publishConfig": {
+        "access": "public"
+    },
     "keywords": ["angular", "ng", "worker", "web", "service", "shared"],
     "license": "MIT",
     "author": {
