chore: change gh token var name

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -54,5 +54,5 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
           path-to-lcov: ./coverage/workers/lcov.info
